# hrmp

./: AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  clang-format.sh  hrmp.spec  uncrustify.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: FindLibFLAC.cmake  FindLibasound.cmake  FindLibsndfile.cmake
doc/: CLI.md  CMakeLists.txt  CONFIGURATION.md  DEVELOPERS.md  GETTING_STARTED.md  PR_GUIDE.md  RPM.md
doc/man/: hrmp-ui.1.rst  hrmp.1.rst  hrmp.conf.5.rst
doc/manual/: 00-frontpage.md  01-introduction.md  02-installation.md  03-configuration.md  04-getting_started.md  05-cli.md  06-ui.md  07-interactive.md  71-git.md  72-rpm.md  73-building.md  97-acknowledgement.md  98-licenses.md  99-references.md
src/: CMakeLists.txt  hrmp-ui.desktop  hrmp-ui.gresource.xml  main.c  ui.c
src/include/: alsa.h  art.h  cmd.h  configuration.h  deque.h  devices.h  dlist.h  extract.h  files.h  flac.h  hrmp.h  interactive.h  json.h  keyboard.h  list.h  logging.h  memory.h  metadata.h  mkv.h  playback.h  playlist.h  redbook.h  ringbuffer.h  scarletbook.h  shmem.h  utils.h  value.h  wav.h
src/libhrmp/: alsa.c  art.c  cmd.c  configuration.c  deque.c  devices.c  dlist.c  extract.c  files.c  flac.c  interactive.c  json.c  keyboard.c  list.c  logging.c  memory.c  metadata.c  mkv.c  playback.c  playlist.c  redbook.c  ringbuffer.c  scarletbook.c  shmem.c  utils.c  value.c  wav.c
test/resources/: 176400-PCM-16-2.flac  176400-PCM-24-2.flac  176400-PCM-32-2.flac  192000-PCM-16-2.flac  192000-PCM-24-2.flac  192000-PCM-32-2.flac  352800-PCM-16-2.flac  352800-PCM-24-2.flac  352800-PCM-32-2.flac  384000-PCM-16-2.flac  384000-PCM-24-2.flac  384000-PCM-32-2.flac  44100-PCM-16-2.flac  44100-PCM-24-2.flac  44100-PCM-32-2.flac  48000-PCM-16-2.flac  48000-PCM-24-2.flac  48000-PCM-32-2.flac  88200-PCM-16-2.flac  88200-PCM-24-2.flac  88200-PCM-32-2.flac  96000-PCM-16-2.flac  96000-PCM-24-2.flac  96000-PCM-32-2.flac  audio.sh
